feat: add task router & task post request to swagger
