# src/routes/task-router.ts
@@ -1,0 +1,8 @@
+import { createTask } from "controllers";
+import express from "express";
+
+const taskRouter = express.Router();
+
+taskRouter.post("/tasks", createTask);
+
+export default taskRouter;
